# internal/dto/user.go
@@ -1,12 +1,11 @@
 package dto
 
 type RegisterRequest struct {
-	Username       string `json:"username" binding:"required,min=3,max=20"`
-	Password       string `json:"password" binding:"required"`
-	Email          string `json:"email" binding:"required,email"`
-	CaptchaCode    string `json:"captchacode" binding:"required"`
-	UserType       int    `json:"usertype"`
-	RecaptchaToken string `json:"recaptchaToken"`
+	Username    string `json:"username" binding:"required,min=3,max=20"`
+	Password    string `json:"password" binding:"required"`
+	Email       string `json:"email" binding:"required,email"`
+	CaptchaCode string `json:"captchacode" binding:"required"`
+	UserType    int    `json:"usertype"`
 }
 
 type RegisterResponse struct {
@@ -18,7 +17,6 @@ type RegisterResponse struct {
 type LoginRequest struct {
 	UsernameOrEmail string `json:"usernameorEmail" binding:"required"`
 	Password        string `json:"password" binding:"required"`
-	RecaptchaToken  string `json:"recaptchaToken"`
 }
 
 type LoginResponse struct {
